# modernerKrieg

./: .gitignore  CMakeLists.txt  CMakePresets.json  PLAN.md  README.md
.github/workflows/: c-engine-ci.yml
Swift/: SharedSpriteManifest.swift  SharedTacticalMapView.swift
assets/: ASSETS.md
assets/fallujah/manifests/: fallujah_2004_markers.markermanifest  southern_industrial_foothold_2004.mapmanifest  southern_industrial_foothold_2004_building_levels.json  southern_industrial_foothold_2004_topology.json
assets/mosul/atlases/: README.md
assets/mosul/audio/: CREDITS.md  mosul_audio_manifest.json
assets/mosul/manifests/: README.md  market_commercial_streets_2003.mapmanifest  market_commercial_streets_2003_building_levels.json  market_commercial_streets_2003_topology.json  mosul_2003_markers.markermanifest  mosul_2003_sprites.spritemanifest
assets/mosul/maps/: README.md
assets/mosul/references/: README.md
assets/mosul/runtime/: README.md
assets/mosul/runtime/maps/: README.md
assets/mosul/runtime/maps/market_commercial_streets_2003/candidates/vehicle_free_rerender_try1_7000/: map_layers.json
assets/mosul/runtime/sprites/: README.md  manifest.json
assets/mosul/runtime/sprites/rendered/: render_manifest.json
assets/mosul/source/: README.md
assets/mosul/source/maps/market_commercial_streets_demo_2003/imgs/market_commercial_streets_demo_7000/: map_layers.json
assets/mosul/source/notes/: 2003_demo_asset_selection.md  provenance.md
assets/mosul/source/sprite_sheets/source_angles/: README.md
assets/mosul/sprites/: README.md
assets/mosul/sprites/characters/: README.md
assets/mosul/sprites/vehicles/: README.md
assets/mosul/sprites/weapons/: README.md
assets/shared/manifests/: shared_tactical_sprites.spritemanifest
assets/shared/runtime/sprites/: README.md  manifest.json
assets/shared/runtime/sprites/rendered/: render_manifest.json
book/: README.md  art_plate_index.md  chapter_01.md  chapter_02.md  chapter_03.md  chapter_04.md  chapter_05.md  chapter_06.md  chapter_07.md  chapter_08.md  chapter_09.md  chapter_10.md  chapter_11.md  chapter_12.md  synopsis.md
cmake/: CheckCoreNoPlatformHeaders.cmake  CheckCoreNoSDL.cmake  CheckHeadlessReplay.cmake  PackageMacSmoke.cmake
docs/: asset_pipeline.md  build_matrix.md  engine_architecture.md  market_commercial_streets_vehicle_bake_audit.md  market_commercial_streets_vehicle_free_rerender_attempt.md  milestone_0_review.md  milestone_1_progress.md  scenario_format.md  third_party.md  traffic_vehicle_cycle8_verification.md  traffic_vehicle_renderer_interaction.md  traffic_vehicle_runtime_behavior.md  traffic_vehicle_scenario_integration.md  traffic_vehicle_sprite_validation.md
engine/ai/: README.md
engine/ai/include/: mk_ai.h
engine/ai/src/: mk_ai.c
engine/assets/include/: mk_asset_manifest.h
engine/assets/src/: mk_asset_manifest.c
engine/core/include/: mk_core.h  mk_log.h
engine/core/src/: mk_core.c  mk_log.c
engine/demo/include/: mk_demo.h
engine/demo/src/: mk_demo.c
engine/platform/sdl3/: main.c
engine/render/include/: mk_board_view.h
engine/render/src/: mk_board_view.c
engine/tools/autoplay/: README.md  mk_ai_battle.c  mk_headless_run.c  mk_replay_validate.c
game/fallujah/scenarios/: southern_industrial_foothold_2004.mkscenario
game/mosul/data/: README.md
game/mosul/include/: mk_mosul_demo.h
game/mosul/scenarios/: README.md  market_blocked_path_smoke_2003.mkscenario  market_cache_search_smoke_2003.mkscenario  market_civilian_panic_smoke_2003.mkscenario  market_commercial_streets_2003.mkscenario  market_commercial_streets_clear_roads_2003.mkscenario  market_commercial_streets_nonblocking_static_roads_2003.mkscenario  market_contested_risk_smoke_2003.mkscenario  market_control_smoke_2003.mkscenario  market_empty_smoke_2003.mkscenario  market_evacuation_smoke_2003.mkscenario  market_interior_contact_smoke_2003.mkscenario  market_rooftop_threat_smoke_2003.mkscenario
game/mosul/src/: mk_mosul_demo.c  mk_mosul_scenario_data.c
modernerKriegAIBattles.xcodeproj/: project.pbxproj
modernerKriegAIBattles.xcodeproj/xcshareddata/xcschemes/: mk_ai_battle.xcscheme
scripts/: check_traffic_vehicle_runtime_smoke.py  generate_fallujah_assets.py  run_ci_checks.sh  validate_traffic_vehicle_sprites.py
tests/: mk_test.h
tests/assets/: test_asset_manifest.c
tests/autoplay/: test_basic_ai.c  test_fixed_loop.c
tests/core/: test_core.c
tests/demo/: test_demo_session.c
tests/mosul/: test_mosul_scenario_data.c
tests/render/: test_board_view.c
